[Mac] Move Polychrome feature to ui/base

This is needed because ShowModal needs to know if a Polychrome browser
is in Views or Cocoa, and it live in components/, which can't depend on
chrome/

This leaves the views_mode_controller version of |IsViewsBrowserCocoa|
in place to avoid changing all its callers.

Bug: 817302
Change-Id: Ia8e06927410fb9aad3fe696a2446418b4d115a7c
Reviewed-on: https://chromium-review.googlesource.com/949362
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541125}
Former-commit-id: f9f3bc00ce408ccf0e08aed82d68fb6a77c016a8