chrome/browser/ui/views_mode_controller.cc
@@ -5,13 +5,14 @@
 #include "chrome/browser/ui/views_mode_controller.h"
 
 #include "chrome/common/chrome_features.h"
+#include "ui/base/ui_base_features.h"
 
 #if defined(OS_MACOSX) && BUILDFLAG(MAC_VIEWS_BROWSER)
 
 namespace views_mode_controller {
 
 bool IsViewsBrowserCocoa() {
-  return !base::FeatureList::IsEnabled(features::kViewsBrowserWindows);
+  return features::IsViewsBrowserCocoa();
 }
 
 }  // namespace views_mode_controller
