ui/base/ui_base_features.cc
@@ -73,4 +73,17 @@ bool IsMusEnabled() {
 #endif
 }
 
+#if defined(OS_MACOSX) && BUILDFLAG(MAC_VIEWS_BROWSER)
+// Causes Views browser builds to use Views browser windows by default rather
+// than Cocoa browser windows.
+const base::Feature kViewsBrowserWindows{"ViewsBrowserWindows",
+                                         base::FEATURE_DISABLED_BY_DEFAULT};
+
+// Returns whether a Views-capable browser build should use the Cocoa browser
+// UI.
+bool IsViewsBrowserCocoa() {
+  return !base::FeatureList::IsEnabled(kViewsBrowserWindows);
+}
+#endif  //  defined(OS_MACOSX) && BUILDFLAG(MAC_VIEWS_BROWSER)
+
 }  // namespace features
